--- a/style.css
+++ b/style.css
@@ -704,6 +704,9 @@ font-family: "I-OTF新ゴシックPro U"; */
   .sayama-city {
     font-size: 3.5vw;
   }
+  .ito-ortho-url {
+    font-size: 3.5vw;
+  }
   .ito-ortho-qr {
     width: 9vw;
   }
